$Id: ChangeLog,v 1.62 2004/05/17 18:01:18 drsung Exp $

2004-05-16  Oliver Schulz  <olischulz@web.de>

	* dev/usartavr.c: Applied bugfixes for half duplex mode and XON/XOFF 
	handling. Thanks to Damian Slee.


2004-04-25  Oliver Schulz  <olischulz@web.de>

	* include/dev/irqstack.h, dev/irqstack.h, os/arch/avr_thread.c: 
	Modified to be compatible with nested interrupts. Every time a interrupt 
	occurs, a counter is incremented. If the counter is zero, the stack 
	switch is performed. After the isr returns, the counter is decremented. 
	An additional variable _irqstackdec defined in os/arch/avr_thread.c. The 
	stack size of each new thread will be decremented by this value.


2004-04-15  Oliver Schulz  <olischulz@web.de>

	* pro/dhcpc.c: Added support for hostname also in DHCPDiscover.

	* pro/resolv.c: If the DNS server answers with more than one record, and 
	the first has no ip address (CNAME), the function failed. 

	* pro/resolv.c, include/netdb.h: New function NutDnsGetMxByDomain to 
	request an MX record from DNS server.


2004-04-15  Harald Kipp  <harald.kipp@egnite.de>

	* eboot: Ethernet boot loader for RTL8019AS added.

	* crt/feof.c, crt/ferror.c, crt/fread.c, crt/nut_io.h:
	Stream functions feof() and ferror() do now return meaningful
	results.

	* net/tcpout.c: Retransmission timer not always set in the
	state machine. Initializing it when the first entry is added
	to the transmit buffer is a much better idea. However, now
	we have a unique retransmission in every situation. Again,
	it is most important to implement round trip time calculation.

	* net/tcpsm.c: The state machine did not increment the sequence
	number on FIN segments. Thus, FIN segments were never
	retransmitted and connections weren't properly closed.

	* net/tcpsm.c: The packet drop problem of the Realtek driver
	could be observed quite often in HTTP applications, where
	the browser concurrently opened several connections. Adding